--- a/views/index.html
+++ b/views/index.html
@@ -17,9 +17,7 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		
-
-		<!-- My custom css file -->
+		<!-- My custom css -->
 		<link rel="stylesheet" type="text/css" href="custom.css">
 
 	</head>
@@ -70,7 +68,7 @@
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Welcome to DadaData</h1>
-			    <p class="lead blurb">Interactive data visualizations for realists and surrealists alike.</p>
+			    <p class="lead blurb tagline">Interactive data visualizations for realists and surrealists alike.</p>
 			    <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p>
