--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -17,7 +17,7 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- My custom css file -->
+		<!-- My custom css -->
 		<link rel="stylesheet" type="text/css" href="custom.css">
 		<link rel="stylesheet" type="text/css" href="visualizations.css">
 
@@ -63,8 +63,8 @@
 	    </div>
 	  </nav>
 
-	  <div class="container of-all">
-	  	<div class="conainer-inner of-all">
+	  <div class="container">
+	  	<div class="conainer-inner">
 			  <div class="cover">
 			    <h1 class="cover-heading">Visualizations</h1>
 			    
