--- a/views/barley.html
+++ b/views/barley.html
@@ -95,7 +95,7 @@
 		https://www.r-bloggers.com/presenting-immer%E2%80%99s-barley-data/
 		-->
 	
-		<div id=blurb class="sideDivs divs">In the early 1930s, a team of agronomists led by F.R. Immer studied ten varieties of barley in order to better understand genetic differences between the strains. Each variety was grown at six locations throughout Minnesota, including the farm at the university of Minnesota where the researchers were based. Each chart show the difference in yield between 1931 and 1932 for each variety. Lines representing an increase are more green, whereas decreases are more yellow. Notice that in all locations except Morris, average barley yields fell between 1931 and 1932. An early hypothesis chalked the outlier up to an error in data reporting. Recent analysis, however, attributes it to differences in local weather patterns (e.g. drought), insect populations, and disease. Hover over the different strains to see how they fared in each location. <div id=varietySVGContainer></div>
+		<div id=blurb class="sideDivs divs">In the 1930s, a team of agronomists led by F.R. Immer set out to study genetic differences between ten varieties of barley. Each variety was grown at six locations throughout Minnesota, including a farm at the university of Minnesota where the researchers were based.<br><br>Each chart shows the difference in yield between 1931 and 1932. Green lines indicate an increase and yellow lines indicate a decrease. Notice that in every location except Morris, average barley yields fell between 1931 and 1932. An early hypothesis chalked the outlier up to an error in data reporting, but recent analysis attributes it to differences in local weather patterns (e.g. drought), insect populations, and disease. Hover over the different strains to see how they fared in each location. <div id=varietySVGContainer></div>
 
 		</div>
 
@@ -143,6 +143,8 @@
 
 	d3.tsv("barley.tsv", function(error, barleyData) {
 		if (error) throw error;
+
+		// console.log(barleyData);
 
 		barleyData.forEach(function(d) {
 			d.yield = +d.yield
