added mailto email

--- a/views/contact.html
+++ b/views/contact.html
@@ -68,7 +68,7 @@
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Email:</h1>
-			    <p class="lead blurb boxed">alejandrokennedy@gmail.com</p>
+			    <a href='mailto:alejandrokennedy@gmail.com'><p class="lead blurb boxed">alejandrokennedy@gmail.com</p></a>
 			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p> -->
