Added weekly viz file, added clickability to email address

--- a/views/contact.html
+++ b/views/contact.html
@@ -69,9 +69,7 @@
 			  <div class="cover">
 			    <h1 class="cover-heading">Email:</h1>
 			    <a href='mailto:alejandrokennedy@gmail.com'><p class="lead blurb boxed">alejandrokennedy@gmail.com</p></a>
-			    <!-- <p class="lead">
-			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
-			    </p> -->
+			    <!--<a href='tel:+1-561-351-7097'><p class="lead blurb boxed">561.351.7097</p></a>-->
 			  </div>
 
 	    </div> <!-- /container-inner -->
