Added headings to WV index, added trumpland1.html as well as the cvs

--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -7,13 +7,21 @@
 
 <style type="text/css">
 
-	
+	body {
+		font-family: helvetica;
+	}
 
 </style>
 
 <body>
 
-	<p1>Hello World</p1>
+	<h1>Weekly Viz</h1>
+
+	<h2><a href="trumpland1">Week 3: Network Graph</a></h2>
+
+	<h2>Week 2: Line Chart</h2>
+
+	<h2>Week 1: Bar Chart</h2>
 
 	<script>
 	//To Do
