Added Trumpland2 and CSVs, updated app.js, updated weekly-vis.html

--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -17,6 +17,8 @@
 
 	<h1>Weekly Viz</h1>
 
+	<h2><a href="trumpland2">Week 4: Network Graph</a></h2>
+
 	<h2><a href="trumpland1">Week 3: Network Graph</a></h2>
 
 	<h2>Week 2: Line Chart</h2>
