Added van-airbnb1 and map data, updated weekly-vis.html

--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -17,7 +17,9 @@
 
 	<h1>Weekly Viz</h1>
 
-	<h2><a href="trumpland2">Week 4: Network Graph</a></h2>
+	<h2><a href="van-airbnb1">Week 4: Simple Map</a></h2>
+
+	<h2><a href="trumpland2">Week 4: Network Graph 2</a></h2>
 
 	<h2><a href="trumpland1">Week 3: Network Graph</a></h2>
 
