Added airbnb2, corrected week order

--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 
 <head>
-	<title>AK's GitHub</title>
+	<title>Weekly Viz</title>
 </head>
 
 <style type="text/css">
@@ -17,9 +17,9 @@
 
 	<h1>Weekly Viz</h1>
 
-	<h2><a href="nothing">Week 5: Nothing</a></h2>
+	<h2><a href="nothing">Week 6: Nothing</a></h2>
 
-	<h2><a href="van-airbnb1">Week 4: Simple Map</a></h2>
+	<h2><a href="van-airbnb1">Week 5: Simple Map</a></h2>
 
 	<h2><a href="trumpland2">Week 4: Network Graph 2</a></h2>
 
