Updated weekly viz and added two other versions of Air BnB

--- a/views/nothing.html
+++ b/views/nothing.html
@@ -14,7 +14,7 @@
 	}
 
 	svg {
-		border: 1px solid #f0f;
+		/*border: 1px solid #f0f;*/
 		display: block;
 		margin: auto;
 	}
@@ -23,7 +23,7 @@
 
 <body>
 
-<p>Oops! Nothing for week 5.</p>
+<p>Oops! Nothing for this week :/</p>
 
 <svg width="960" height="600"></svg>
 
