--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -17,6 +17,10 @@
 
 	<h1>Weekly Viz</h1>
 
+	<h2><a href="nothing">Week 8: Nothing</a></h2>
+
+	<h2><a href="nothing">Week 7: Nothing</a></h2>
+
 	<h2><a href="nothing">Week 6: Nothing</a></h2>
 
 	<h2><a href="van-airbnb1">Week 5: Simple Map</a></h2>
