--- a/views/van-airbnb3.html
+++ b/views/van-airbnb3.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <meta charset="utf-8">
 
@@ -21,13 +22,9 @@
 	}
 
 	.vanOSMFeatures {
-		fill: none;
-		stroke: grey;
-		stroke-width: 1;
-	}
-
-	circle {
-		fill: red;
+  fill: none;
+  stroke: grey;
+	stroke-width: 1;
 	}
 
 </style>
@@ -45,22 +42,29 @@
 
 		d3.queue()
 			.defer(d3.json, "van_osm_line_mpshpr.json")
+			// .defer(d3.json, "vancouver_canada_osm_line.geojson")
 			.defer(d3.csv, "listings_detailed.csv")
 			.await(ready);
 
 		function ready(error, vanOSM, listings) {
 			if (error) throw error;
+			// console.log("vanOSM", vanOSM);
 
 			listings.forEach(function(d) {
 				d.longitude = +d.longitude;
 				d.latitude = +d.latitude;
 			});
 
-			console.log("listings", listings);
+			console.log("listings", listings[0]);
 
 			var projection = d3.geoAlbers()
 				.rotate([123, 0, 0])
 				.fitExtent([[30, 10], [910, 590]], vanOSM);
+
+			// // aa = [-122.490402, 37.786453];
+			// aa = [-123.179992589626, 49.2568776194657];
+			// console.log("aa", aa);
+			// console.log("aa proj", projection(aa));
 
 			var path = d3.geoPath()
 				.projection(projection)
@@ -71,16 +75,30 @@
 				.attr("class", "vanOSMFeatures")
 				.attr("d", path);
 
+			// svg.selectAll("circle")
+			// 	.data([aa]).enter()
+			// 	.append("circle")
+			// 	.attr("cx", function (d) { console.log("proj(d) 0", projection(d)[0]); 
+			// 		// console.log(d);
+			// 		return projection(d)[0]; 
+			// 	})
+			// 	.attr("cy", function (d) { console.log("proj(d) 1", projection(d)[1]);return projection(d)[1]; })
+			// 	.attr("r", "8px")
+			// 	.attr("fill", "red")
+
 			svg.selectAll("circle")
 				.data(listings)
 			 .enter().append("circle")
-				.attr("cx", function(d) {
-					return (projection([d.longitude, d.latitude])[0]);
+				.attr("cx", function(d) { return (projection([d.longitude, d.latitude])[0]);
+					// console.log(d);
+					// return projection(d.longitude) 
 				})
 				.attr("cy", function(d) { 
 					return (projection([d.longitude, d.latitude])[1]); 
+					// return projection(d.latitude) 
 				})
-				.attr("r", 2);
+				.attr("r", 1.5);
+
 
 		} //ready callback
 
