added trump land 3, updated weekly viz

--- a/views/weekly-viz.html
+++ b/views/weekly-viz.html
@@ -17,6 +17,10 @@
 
 	<h1>Weekly Viz</h1>
 
+<!-- 03 March 2017 -->
+<!-- will this be trumpland or nothing? -->
+	<!-- <h2><a href="trumpland3">Week 9: Nothing</a></h2> -->
+
 	<h2><a href="nothing">Week 8: Nothing</a></h2>
 
 	<h2><a href="nothing">Week 7: Nothing</a></h2>
