--- a/views/mta.html
+++ b/views/mta.html
@@ -40,9 +40,12 @@
 	}
 
 	.mySvg {
-		/*border: 1px solid #f0f;*/
+		border: 2px solid #e5e2e0;
 		display: block;
 		margin: auto;
+		margin-bottom: 70px;
+		/*background-color: red;*/
+		/*background-opacity: 0.2;*/
 
 		/* Old way to have SVG appear in center of screen. Better to center a div then put SVG in the div*/
 		/*position: absolute;
@@ -51,7 +54,7 @@
 		transform: translate(-50%, -50%);*/
 	}
 
-	.axis {
+	.axis.text {
 	}
 
 	.bar {
@@ -74,6 +77,7 @@
 	// drop down
 	// subcategory title
 	// axis labels
+	// base margins on data (esp bottom and right)
 
 		var marginVal = 10
 
@@ -84,20 +88,8 @@
 
 		var barPadding = 4;
 
-		var xScale = d3.scaleBand()
-			.range([0, width]);
-
-		var yScale = d3.scaleLinear()
-			.range([height, 0]);
-
-		var mySvg = d3.select("#svgDiv").append("svg")
-			.attr("class", "mySvg")
-			.attr("width", width + margin.left + margin.right)
-			.attr("height", height + margin.top + margin.bottom)
-			.append("g")
-			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-		d3.xml("http://advisory.mtanyct.info/LPUWebServices/CurrentLostProperty.aspx", function(error, xmlData) {
+		// d3.xml("http://advisory.mtanyct.info/LPUWebServices/CurrentLostProperty.aspx", function(error, xmlData) {
+		d3.xml("CurrentLostProperty.aspx.xml", function(error, xmlData) {
 			if (error) throw error;
 			// console.log(xmlData);
 
@@ -116,90 +108,80 @@
 		  	}; // first map.call callback return
 		  }); // first map.call callback
 
-		  // console.log(jsonData);
+		  console.log(jsonData);
 
-		  // var subCatName = jsonData.map ( function(category) { 
-		  // 	return category.subcategories.map ( function (homefurnsubs) { 
-		  // 		return homefurnsubs.name } ) 
-		  // } );
-		  // console.log(subCatName[0]);
-
-		  // var subCatCount = jsonData.map ( function(category) { 
-		  // 	return category.subcategories.map ( function (homefurnsubs) { 
-		  // 		return homefurnsubs.count } ) 
-		  // } );
-		  // console.log(subCatCount[0]);
-
-		  //////////////////////////////
-
-		  var catSet = d3.set(jsonData.map(function(d) { return d.Category })).values()
-		  console.log(catSet);
-
-		  catSet.forEach(function(d) {
+		  jsonData.forEach(function(d) {
 		  	drawChart(d)
 		  })
 
-		  function drawChart(catNumber) {
+		  function drawChart(category) {
 
-		  // filter the data
-		  var catNum = 5
+				var xScale = d3.scaleBand()
+					.range([0, width]);
 
-		  var dataset = jsonData[catNum].subcategories;
-		  // console.log(dataset);
+				var yScale = d3.scaleLinear()
+					.range([height, 0]);
 
-		  var datasetLabel = jsonData[catNum].Category
+				var mySvg = d3.select("#svgDiv").append("svg")
+					.attr("class", "mySvg")
+					.attr("width", width + margin.left + margin.right)
+					.attr("height", height + margin.top + margin.bottom)
+					.append("g")
+					.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-		  // format the data
-		  dataset.forEach(function(d) {
-		  	d.count = +d.count;
-		  });
+		  	console.log(category);
 
-		  xScale.domain(dataset.map(function(d) { return d.name }));
+			  // format the data
+			  category.subcategories.forEach(function(d) {
+			  	d.count = +d.count;
+			  });
 
-		  // yScale.domain([0, 1190]);
-		  // console.log(dataset.map(function(d) { return d.name }));
-		  yScale.domain([0, d3.max(dataset.map( function(d) { return d.count } ))]);
+			  xScale.domain(category.subcategories.map(function(d) { return d.name }));
 
-			mySvg.selectAll(".bar")
-				.data(dataset)
-			 .enter().append("rect")
-				.attr("class", "bar")
-				.attr("x", function(d) { return xScale(d.name) + (1/2)* barPadding })
-				.attr("width", xScale.bandwidth() - barPadding)
-				.attr("y", function(d) { return yScale(d.count) })
-				.attr("height", function(d) { return height - yScale(d.count); });
+			  // yScale.domain([0, 1190]);
+			  // console.log(dataset.map(function(d) { return d.name }));
+			  yScale.domain([0, d3.max(category.subcategories.map( function(d) { return d.count } ))]);
 
-			// add axes
-			var xAxis = mySvg.append("g")
-				.attr("class", "x axis")
-	      .attr("transform", "translate(0," + height + ")")
-	      .call(d3.axisBottom(xScale)
-	      	.tickSizeOuter(0))
-	     .selectAll("text")
-	     	// .attr("y", 0)
-	     	.attr("x", 9)
-	     	.attr("dy", "0.35em")
-	     	.attr("transform", "rotate(45)")
-	     	.style("text-anchor", "start");
+				mySvg.selectAll(".bar")
+					.data(category.subcategories)
+				 .enter().append("rect")
+					.attr("class", "bar")
+					.attr("x", function(d) { return xScale(d.name) + (1/2)* barPadding })
+					.attr("width", xScale.bandwidth() - barPadding)
+					.attr("y", function(d) { return yScale(d.count) })
+					.attr("height", function(d) { return height - yScale(d.count); });
 
-	    mySvg.append("text")             
-	      .attr("transform",
-	            "translate(" + (width/2) + "," + 
-	                           (height + margin.top + margin.bottom - 20) + ")")
-	      .style("text-anchor", "middle")
-	      .text(datasetLabel);
+				// add axes
+				var xAxis = mySvg.append("g")
+					.attr("class", "x axis")
+		      .attr("transform", "translate(0," + height + ")")
+		      .call(d3.axisBottom(xScale)
+		      	.tickSizeOuter(0))
+		     .selectAll("text")
+		     	// .attr("y", 0)
+		     	.attr("x", 9)
+		     	.attr("dy", "0.35em")
+		     	.attr("transform", "rotate(45)")
+		     	.style("text-anchor", "start");
 
-	    var yAxis = mySvg.append("g")
-	    	.attr("class", "y axis")
-	      .call(d3.axisLeft(yScale).tickSizeOuter(0));
+		    mySvg.append("text")             
+		      .attr("transform",
+		            "translate(" + (width/2) + "," + 
+		                           (height + margin.top + margin.bottom - 20) + ")")
+		      .style("text-anchor", "middle")
+		      .text(category.Category);
 
-	    mySvg.append("text")
-	    	.attr("transform", "rotate(-90)")
-	      .attr("y", 0 - margin.left)
-	      .attr("x", 0 - (height / 2))
-	      .attr("dy", "1em")
-	      .style("text-anchor", "middle")
-	    	.text("Count")
+		    var yAxis = mySvg.append("g")
+		    	.attr("class", "y axis")
+		      .call(d3.axisLeft(yScale).tickSizeOuter(0));
+
+		    mySvg.append("text")
+		    	.attr("transform", "rotate(-90)")
+		      .attr("y", 0 - margin.left)
+		      .attr("x", 0 - (height / 2))
+		      .attr("dy", "1em")
+		      .style("text-anchor", "middle")
+		    	.text("Count")
 
 		  }; // drawChart callback
 
