--- a/views/trumpland4.html
+++ b/views/trumpland4.html
@@ -31,7 +31,12 @@
 	  stroke: white;
 	  /*stroke-opacity: .3;*/
 	}
-
+/*
+	.nodes:hover circle {
+		fill: white;
+		stroke: black;
+	}
+*/
 	.nodes text {
 	  display: none;
 	  font: sans-serif;
@@ -74,6 +79,8 @@
 	// Find other rich people to compare this vis with
 	// Fix zoom label stroke
 	// Indicate date that the data was last updated
+	// Way to handle lone nodes
+	// Have label halo like on text in my website
 
 		var margin = {top: 0, right: 0, bottom: 0, left: 0},
 			width = window.innerWidth - margin.left - margin.right,
@@ -215,11 +222,14 @@
 				.attr("class", "nodes")
 				.on("mouseover", function() {
 						this.parentNode.appendChild(this);
-					})
+						console.log(this);
+						// this.circle.style("stroke", function(d) { return color(d.type); });
+					});
 
 			var circle = node.append("circle")
 			 	.attr("r", 7)
-			 	.style("fill", function(d) { return color(d.type); });
+			 	.attr("class", "nodeCircle")
+			 	.style("fill", function(d) { return color(d.type); })
 
 			var labelShadow = node.append("text")
 		 		.attr("dy", ".35em")
@@ -249,12 +259,12 @@
 					labelShadow.style("font-size",text_size + "px");
 
 				var labelStroke = text_size / 8;
-			    if (text_size / 10 > max_labelStroke) labelStroke = max_labelStroke / d3.event.transform.k;
+			    if (text_size / 8 > max_labelStroke) labelStroke = max_labelStroke / d3.event.transform.k;
 			    labelShadow.style("stroke-width", labelStroke);
-			    console.log("labelStroke: " + labelStroke);
+			    // console.log("labelStroke: " + labelStroke);
 
 					// console.log(text_size);
-					console.log(text_size / 10);
+					// console.log(text_size / 10);
 
 				}); // zoom function callback
 
