--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -3,6 +3,8 @@
 
 <head>
 	<title>Trump World</title>
+	<!-- <script src="d3.js" charset="utf-8"></script> -->
+	<!-- <script src="queue.min.js"></script> -->
 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 </head>
@@ -96,6 +98,7 @@
 	// Have label halo like on text in my website
 	// Write javascript function to automatically add any new "entity" categories to the viz
 	// Stroke for the links thiner as one zooms in more
+	// tidy up code related to "click away" functionality to celar selection
 
 		var margin = {top: 0, right: 0, bottom: 0, left: 0},
 			width = window.innerWidth - margin.left - margin.right,
@@ -112,17 +115,32 @@
 	  var nominal_stroke = 1.25;
 		var max_stroke = 3.5;
 
-		// console.log(d3.event.transform.k);
-
 	  var nominal_labelStroke = 1
 	  var max_labelStroke = 20
 
-		var svg = d3.select("body").append("svg")
+		var svg = d3.select("body").attr("id", "body").append("svg")
 			.attr("width", width + margin.left + margin.right)
-			.attr("height", height + margin.top + margin.bottom);
+			.attr("height", height + margin.top + margin.bottom)
+			.on("click", function(){
+				if (d3.event.target === this) {
+					// clear any "onClick" styles for nodes
+	 				d3.selectAll(".nodes")
+	 					.select(".nodeCircle")
+	 					.style("stroke", "white")
+	 					.style("fill-opacity", 1);
+	 				// clear any "onClick" styles for links
+	 				d3.selectAll(".lines")
+	 					.style("stroke", "grey")
+	 					.style("stroke-opacity", 1);
+				};
+			});
 
 		var gContainer = svg.append("g")
-			.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+			.attr("id", "gContainer")
+			.attr("transform", "translate(" + margin.left + "," + margin.top + ")")
+			.on("click", function() {
+			});
+
 
  		var loading = svg.append("text")
  			.attr("class", "loading")
@@ -143,8 +161,8 @@
 	  var color = d3.scaleOrdinal(d3.schemeCategory10);
 
 	  queue()
-	  	.defer(d3.csv, "https://raw.githubusercontent.com/BuzzFeedNews/trumpworld/master/data/trumpworld.csv")
-	  	// .defer(d3.csv, "trumpworld.csv")
+	  	// .defer(d3.csv, "https://raw.githubusercontent.com/BuzzFeedNews/trumpworld/master/data/trumpworld.csv")
+	  	.defer(d3.csv, "trumpworld.csv")
 	  	.await(ready);
 
 	  function slug (id) {
@@ -161,13 +179,13 @@
 	  	if (error) throw error;
 	  	// console.log("Entity Count: " + trumpworld.length);
 
-	  	var entityTypeList = d3.set(
-	  		trumpworld.map(function(d) {return d["Entity A Type"] })
-	  		.concat(trumpworld.map(function(d) {return d["Entity B Type"] })))
-	  		.values();
+	  	// var entityTypeList = d3.set(
+	  	// 	trumpworld.map(function(d) {return d["Entity A Type"] })
+	  	// 	.concat(trumpworld.map(function(d) {return d["Entity B Type"] })))
+	  	// 	.values();
 	  	// console.log("entityTypeList: " + entityTypeList)
 
-	  	// // function to filter/map/set for each unique entry in either Entity A or Entity B columns 
+	  	// // If time: try writing a function to filter/map/set for each unique entry in either Entity A or Entity B columns 
 	  	// entityTypeList.forEach(function(mungeType) {})
 
 	  	var orgAs = trumpworld
@@ -202,7 +220,7 @@
 	  	var allPeeps = d3.set(peeps).values();
 	  	var allFeds = d3.set(feds).values();
 
-	  	var nodeCount = (allPeeps.length + allOrgs.length + allFeds.length)
+	  	// var nodeCount = (allPeeps.length + allOrgs.length + allFeds.length)
 	  	// console.log("nodeCount: " + nodeCount);
 
 	  	// // NODES REFERENCE
@@ -336,10 +354,7 @@
 	 			.append("path")
 	 			.attr("class", "clip-path-circle");
 
-	 		// var colorScale = d3.scaleOrdinal(d3.schemeCategory20c);
-
 	 		var clickHilightColor = "rgb(52, 255, 38)"
-	 		var clickHilightColor = "purple"
 
 	 		var circleCatcher = node.append("circle")
 	 			.attr("r", 30)
@@ -350,9 +365,6 @@
 	 			.attr("clip-path", function(d) { return "url(#clip-" + slug(d.id) + ")"; })
 	 			.on("mouseover", function () {
 
-	 				console.log(d3.select(this.parentNode).attr("class").split(" ").includes("neighbouringNodeCircles"));
-	 				console.log(typeof d3.select(this.parentNode).attr("class"));
-
 	 				d3.select(this.parentNode).select(".nodeCircle")
 	 				.style("fill", "white")
 					.style("stroke", function(d) { return color(d.type) })
@@ -361,7 +373,7 @@
 	 			.on("mouseleave", function () {
 	 				if (d3.select(this.parentNode).attr("class").split(" ").includes("neighbouringNodeCircles")) {
 	 					d3.select(this.parentNode).select(".nodeCircle")
-	 					.style("stroke", clickHilightColor)
+	 					.style("stroke", "white")
 	 					.style("fill", function(d) { return color(d.type) });
 	 				} else {
 	 					d3.select(this.parentNode).select(".nodeCircle")
@@ -374,11 +386,13 @@
 	 				// clear any "onClick" styles for nodes
 	 				d3.selectAll(".nodes")
 	 					.select(".nodeCircle")
-	 					.style("stroke", "white");
+	 					.style("stroke", "white")
+	 					.style("fill-opacity", .2);
 
 	 				// clear any "onClick" styles for links
 	 				d3.selectAll(".lines")
-	 					.style("stroke", "grey");
+	 					.style("stroke", "grey")
+	 					.style("stroke-opacity", .2);
 
 	 				var isNeighbour = links.reduce(function (neighbours, link) {
 	 					if (link.target.id === d.id) {
@@ -387,26 +401,29 @@
 	 						neighbours.push(link.target.id)
 	 					} return neighbours;
 	 				}, [d.id])
-	 				// console.log(isNeighbour);
 
 	 				d3.selectAll(".nodes")
 	 					.classed("neighbouringNodeCircles", function(e) {
 	 						if (isNeighbour.includes(e.id)) { 
-	 							// console.log(e.id + " has been classed true");
 	 							return true;
 	 						}
 	 					});
 
+	 				d3.select(this.parentNode).select(".nodeCircle")
+	 					.style("stroke", function(d) { return color(d.type) });
+
  					d3.selectAll(".neighbouringNodeCircles")
  						.select(".nodeCircle")
- 						.style("stroke", clickHilightColor);
+ 						// .style("stroke", function(d) { return color(d.type) })
+ 						// .style("stroke", clickHilightColor)
+ 						.style("fill-opacity", 1);
 
+ 					// // show labels on hover
  					// d3.selectAll(".neighbouringNodeCircles")
  					// 	.select(".label")
  					// 	.style("display", "inline")
  					// 	.style("text-shadow", "#ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px")
 	 				// 	// .classed(".nodes:hover text");
-
  					// d3.selectAll(".neighbouringNodeCircles")
  					// 	.select(".labelShadow")
  					// 	.style("display", "inline")
@@ -423,7 +440,8 @@
 	 					});
 	 					
 	 					d3.selectAll(".neighbouringLines")
-	 					.style("stroke", clickHilightColor);
+	 					// .style("stroke", clickHilightColor);
+	 					.style("stroke-opacity", 1);
 
 	 			}); // on click callback
 
